# NexusAtom

./: =2.0  PLAN_MVC.md  README.md  pyproject.toml
cli/: __init__.py  main.py
specs/atoms/: _template.md
src/nexus_atom/: __init__.py  dag.py  fsm.py  manifest.py  models.py  orchestrator.py
store/: README.md
store/skills/notebook/1.0.0/: _meta.yaml  system_prompt.md
tests/: __init__.py  test_dag.py  test_fsm.py  test_manifest.py  test_models.py
vault/_core/: .gitkeep
vault/_core/config/: RESTRUCTURE_LOG.md  manifest.yaml  nuclear_registry.yaml  schema.yaml  security_policy.yaml
vault/_core/context/history/: nuances_log.md
vault/_core/context/principles/: 01_atom_container.md  02_vault_ssot.md  03_dynamic_registry.md  04_logical_archiving.md  05_agent_protocol.md  06_git_integration.md  overview.md
vault/_core/context/workflows/governance-policies/: agent_workflow.md  git_spec_first_trunk.md
vault/_core/shared/guides/: MET.GUIDE.VAULT_LAYER_MAPPING.v1.md
vault/_system/: RESTRUCTURE_LOG.md
vault/_system/config/: RESTRUCTURE_LOG.md
vault/meta/decisions/: DEC.ARCH.VAULT_VS_STORE_SEPARATION.v1.md
vault/nuclear/asset_marketplace/_contract/: _contract.yaml
vault/nuclear/asset_registry/_contract/: _contract.yaml
vault/nuclear/engineering/_contract/: _contract.yaml  dependencies.yaml  registry.yaml
vault/nuclear/engineering/artifacts/analysis/: ENG-011-agent-discovery-and-skills.md  ENG-012-agent-integrations.md  ENG-013-archive-memory-isolation.md  ENG-014-archive-strategy-hybrid.md  ENG-015-distribution-strategy.md  ENG-017-library-and-api.md  (+20 more)
(+69 files in other folders)
